--- a/predictor_standalone.html
+++ b/predictor_standalone.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="predictor.css" />
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
 <script type="text/javascript" src="http://www.fanbookz.local/static/jscript/jquery/jquery.js?v=b7ce8b9634041d3567015fd88b5110d6"></script>
 <script type="text/javascript" src="showWidget.js"></script>
+<script type="text/javascript" src="SpinBox.src.js"></script>
 </head>
 <body>
 <div class="predictor" id="predictor">
@@ -19,6 +21,7 @@
 		<a class="statslink" href="#">stats</a>
 	</div>'
 </script>
+<div id="stats_container"></div>
 <script type="text/html" id="predictor_play">
 	'<div id="play_container">
 		<div class="play">
@@ -28,12 +31,20 @@
 		</div>
 	</div>'
 </script>
-<div id="stats_container"></div>
 <script type="text/html" id="predictor_score">
 	'<div class="score">
 		<div class="result">'+resultstring+'</div>
-		<div><a class="predict" href="#">Can you predict the score?</a></div>
-		<div><a class="skip" href="#">Skip</a></div>
+		<div><a class="predict-score" href="#">Can you predict the score?</a></div>
+		<div><a class="predictor-submit" href="#">Skip</a></div>
+	</div>'
+</script>
+<script type="text/html" id="predictor_form">
+	'<div class="selectScore">
+		<div>
+			<div class="home"><div id="homeGoals"></div></div>
+			<div class="away"><div id="awayGoals"></div></div>
+			<button class="predictor-submit">done</button>
+		</div>
 	</div>'
 </script>
 <script type="text/html" id="predictor_stats">
@@ -57,5 +68,6 @@
 	</div>'
 </script>
 </div>
+
 </body>
 </html>
