Cleaned up layout and execution order, simplified a lot of things

--- a/predictor_standalone.html
+++ b/predictor_standalone.html
@@ -33,9 +33,10 @@
 </script>
 <script type="text/html" id="predictor_score">
 	'<div class="score">
-		<div class="result">'+resultstring+'</div>
+		<div class="result" id="resultsDisplay">'+resultstring+'</div>
 		<div><a class="predict-score" href="#">Can you predict the score?</a></div>
-		<div><a class="predictor-submit" href="#">Skip</a></div>
+		<div>Or are you happy just to predict the outcome?</div>
+		<button class="predictor-submit" href="#">Skip</button>
 	</div>'
 </script>
 <script type="text/html" id="predictor_form">
