Tidied up the display for the score screen where the prediction is invited. Changed predict to a button and made the wording consistent with other screens.

--- a/predictor_standalone.html
+++ b/predictor_standalone.html
@@ -34,9 +34,9 @@
 <script type="text/html" id="predictor_score">
 	'<div class="score">
 		<div class="result" id="resultsDisplay">'+resultstring+'</div>
-		<div><a class="predict-score" href="#">Can you predict the score?</a></div>
-		<div>Or are you happy just to predict the outcome?</div>
-		<button class="predictor-submit" href="#">Skip</button>
+		<div class="scoreAction">Can you predict the score?<button class="predict-score" href="#">Predict</button></div>
+		<div class="scoreAction">No thanks, just the outcome:
+		<button class="predictor-submit" href="#">Submit</button></div>
 	</div>'
 </script>
 <script type="text/html" id="predictor_form">
