--- a/oo_predictor.html
+++ b/oo_predictor.html
@@ -4,67 +4,85 @@
 <link rel="stylesheet" type="text/css" href="predictor.css" />
 <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
 <script type="text/javascript" src="http://www.fanbookz.local/static/jscript/jquery/jquery.js?v=b7ce8b9634041d3567015fd88b5110d6"></script>
-<script type="text/javascript" src="showWidget.js"></script>
+<script type="text/javascript" src="js/classes.js"></script>
 <script type="text/javascript" src="SpinBox.src.js"></script>
 </head>
 <body>
 <div class="predictor" id="predictor">
-<script type="text/html" id="predictor_fixture">
-	'<div class="fixture">
-		<div class="home" id="badge_'+fixture.home.id+'">'
-			+fixture.home.displayString+
-		'</div>
-		<span>VS</span>
-		<div class="away"  id="badge_'+fixture.away.id+'">'
-			+fixture.away.displayString+
-		'</div>
-		<a class="statslink" href="#">stats</a>
-	</div>'
-</script>
-<script type="text/html" id="predictor_play">
-	<div class="play">
-		<div><label for="home_win">'+fixture.percentages.home+'</label><button id="home_win" class="predictor-play">home</button></div>
-		<div><label for="draw">'+fixture.percentages.draw+'</label><button id="draw" class="predictor-play">draw</button></div>
-		<div><label for="away_win">'+fixture.percentages.away+'</label><button id="away_win" class="predictor-play">away</button></div>
-	</div>
-</script>
-<script type="text/html" id="predictor_score">
-	<div class="score">
-		<div class="result" id="resultsDisplay">'+resultstring+'</div>
-		<div class="scoreAction">Can you predict the score?<button class="predict-score" href="#">Predict</button></div>
-		<div class="scoreAction">No thanks, just the outcome:
-		<button class="predictor-submit" href="#">Submit</button></div>
-	</div>
-</script>
-<script type="text/html" id="predictor_form">
-	<div class="selectScore">
-		<div>
-			<div class="home"><div id="homeGoals"></div></div>
-			<div class="away"><div id="awayGoals"></div></div>
-			<button class="predictor-submit">done</button>
+	<script type="text/html" id="predictor_fixture">
+		<div class="fixture">
+			<div class="home" id="badge_'+fixture.home.id+'">
+				<data source="fixture" field="home.displayString" />
+			</div>
+			<span>VS</span>
+			<div class="away"  id="badge_'+fixture.away.id+'">
+				<data source="fixture" field="away.displayString" />
+			</div>
+			<a class="statslink" href="#">stats</a>
+			<panel class="prediction">
+				<div class="play">
+					<div>
+						<label for="home_win">
+							<data source="fixture" field="percentages.home" />
+						</label>
+						<button id="home_win" class="predictor-play">home</button>
+					</div>
+					<div>
+						<label for="draw">
+							<data source="fixture" field="percentages.draw" />
+						</label>
+						<button id="draw" class="predictor-play">draw</button>
+					</div>
+					<div>
+						<label for="away_win">
+							<data source="fixture" field="percentages.away" />
+						</label>
+						<button id="away_win" class="predictor-play">away</button>
+					</div>
+				</div>
+				<div class="score">
+					<div class="result" id="resultsDisplay">
+						<data class="controller" field="fixture.resultstring" />
+					</div>
+					<div class="scoreAction">
+						Can you predict the score?
+						<button class="predict-score" href="#">Predict</button>
+					</div>
+					<div class="scoreAction">
+						No thanks, just the outcome:
+						<button class="predictor-submit" href="#">Submit</button>
+					</div>
+				</div>
+				<div class="selectScore">
+					<div>
+						<div class="home"><div id="homeGoals"></div></div>
+						<div class="away"><div id="awayGoals"></div></div>
+						<button class="predictor-submit">done</button>
+					</div>
+				</div>
+			</panel>
+			<panel class="stats">
+				<div class="stats">
+					<table>
+						<colgroup><col class="legend"><col span="2" class="team_record"></colgroup>
+						<thead>
+							<tr><th></th><th>'+fixture.home.displayString+'</th><th>'+fixture.away.displayString+'</th></tr>
+						</thead>
+						<tbody>
+							<tr><td>League position </td><td>'+homeStats.position+'</td><td>'+awayStats.position+'</td></tr>
+							<tr><td>Form </td><td>'+homeStats.form+'</td><td>'+awayStats.form+'</td></tr>
+							<tr><td>Home form </td><td>'+homeStats.homeForm+'</td><td>'+awayStats.homeForm+'</td></tr>
+							<tr><td>Away form </td><td>'+homeStats.awayForm+'</td><td>'+awayStats.awayForm+'</td></tr>
+							<tr><td>Average goals (H) </td><td>'+homeStats.avgHomeGoals+'</td><td>'+awayStats.avgHomeGoals+'</td></tr>
+							<tr><td>Average goals (A) </td><td>'+homeStats.avgAwayGoals+'</td><td>'+awayStats.avgAwayGoals+'</td></tr>
+							<tr><td>Average goals against (H)</td><td>'+homeStats.avgHomeConceded+'</td><td>'+awayStats.avgHomeConceded+'</td></tr>
+							<tr><td>Average goals against (A)</td><td>'+homeStats.avgAwayConceded+'</td><td>'+awayStats.avgAwayConceded+'</td></tr>
+						</tbody>
+					</table>
+				</div>
+			</panel>
 		</div>
-	</div>
-</script>
-<script type="text/html" id="predictor_stats">
-	<div class="stats">
-		<table>
-			<colgroup><col class="legend"><col span="2" class="team_record"></colgroup>
-			<thead>
-				<tr><th></th><th>'+fixture.home.displayString+'</th><th>'+fixture.away.displayString+'</th></tr>
-			</thead>
-			<tbody>
-				<tr><td>League position </td><td>'+homeStats.position+'</td><td>'+awayStats.position+'</td></tr>
-				<tr><td>Form </td><td>'+homeStats.form+'</td><td>'+awayStats.form+'</td></tr>
-				<tr><td>Home form </td><td>'+homeStats.homeForm+'</td><td>'+awayStats.homeForm+'</td></tr>
-				<tr><td>Away form </td><td>'+homeStats.awayForm+'</td><td>'+awayStats.awayForm+'</td></tr>
-				<tr><td>Average goals (H) </td><td>'+homeStats.avgHomeGoals+'</td><td>'+awayStats.avgHomeGoals+'</td></tr>
-				<tr><td>Average goals (A) </td><td>'+homeStats.avgAwayGoals+'</td><td>'+awayStats.avgAwayGoals+'</td></tr>
-				<tr><td>Average goals against (H)</td><td>'+homeStats.avgHomeConceded+'</td><td>'+awayStats.avgHomeConceded+'</td></tr>
-				<tr><td>Average goals against (A)</td><td>'+homeStats.avgAwayConceded+'</td><td>'+awayStats.avgAwayConceded+'</td></tr>
-			</tbody>
-		</table>
-	</div>
-</script>
+	</script>
 </div>
 
 </body>
