Stashing the work so far

--- a/oo_predictor.html
+++ b/oo_predictor.html
@@ -18,7 +18,7 @@
 			<div class="away"  id="badge_'+fixture.away.id+'">
 				<data source="fixture" field="away.displayString" />
 			</div>
-			<a class="statslink" href="#">stats</a>
+			<a class="stats" href="#">stats</a>
 			</panel>
 		<panel class="prediction">
 			<panel class="prediction" state="select-result">
