--- a/predictor_standalone.html
+++ b/predictor_standalone.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/stylesheet.css" />
 <script type="text/javascript" src="http://www.fanbookz.local/static/jscript/jquery/jquery.js?v=b7ce8b9634041d3567015fd88b5110d6"></script>
 <script type="text/javascript" src="showWidget.js"></script>
+<script type="text/javascript" src="run_predictor.js"></script>
 <script type="text/javascript" src="SpinBox.src.js"></script>
 </head>
 <body>
@@ -23,10 +24,28 @@
 </script>
 <script type="text/html" id="predictor_play">
 	'<div id="play_container">
+
 		<div class="play">
-			<div><label for="home_win">'+fixture.percentages.home+'</label><button id="home_win" class="predictor-play">home</button></div>
-			<div><label for="draw">'+fixture.percentages.draw+'</label><button id="draw" class="predictor-play">draw</button></div>
-			<div><label for="away_win">'+fixture.percentages.away+'</label><button id="away_win" class="predictor-play">away</button></div>
+<span class="toggle-bg">
+    <input type="radio" name="toggle" value="off" />
+    <input type="radio" name="toggle" value="on" />
+    <span class="switch"></span>
+</span>
+			<div>
+				<label class="fanbookz" for="home_win">'+fixture.percentages.home+'</label>
+				<label for="home_win">'+fixture.odds.home+'</label>
+				<button id="home_win" class="predictor-play">home</button>
+			</div>
+			<div>
+				<label class="fanbookz" for="draw">'+fixture.percentages.draw+'</label>
+				<label for="draw">'+fixture.odds.draw+'</label>
+				<button id="draw" class="predictor-play">draw</button>
+			</div>
+			<div>
+				<label class="fanbookz" for="away_win">'+fixture.percentages.away+'</label>
+				<label for="away_win">'+fixture.odds.away+'</label>
+				<button id="away_win" class="predictor-play">away</button>
+			</div>
 		</div>
 	</div>'
 </script>
